Updated: Student (75%) Todo: Receipt-DB-List-of-Transactions Next: Admin 1-page

--- a/src/main/resources/templates/student-req-receipt.html
+++ b/src/main/resources/templates/student-req-receipt.html
@@ -8,7 +8,7 @@
 
     <main>
         <section>
-            <img class="icon-logo" src="img/TUA-logo.png">
+            <img class="icon-logo" th:src="@{/img/TUA-logo.png}">
             <div class="section-header">
                 <h1>Confirm your Request</h1>
                 <span class="body-1">Please double check your document request and upload your proof of payment through
