--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -16,7 +16,7 @@
 <body>
     <header th:fragment="header">
         <div class="header-left">
-            <h2>Trinity University of Asia</h2>
+            <h2><a th:href="@{/}">Trinity University of Asia</a></h2>
         </div>
         <div class="header-right">
             <form>
