--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,4 +1,4 @@
-/* * {
+/* {
   outline: 1px red solid;
 } */
 
@@ -193,9 +193,19 @@ section .student-request .manage-request table {
 section .student-request .request-details .form-buttons {
   display: flex;
   flex-flow: row wrap;
-  justify-content: flex-start;
+  justify-content: center;
   margin-top: 0.75rem;
   gap: 0.5rem;
+}
+section .student-request .request-details .form-buttons2 {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: left;
+  margin-top: 0.75rem;
+  gap: 0.5rem;
+}
+section .student-request .request-details .form-buttons2 button {
+  width: 15%;
 }
 section .student-request .request-details .form-buttons button {
   width: 22%;
