update: frontend-student

--- a/src/main/resources/templates/admin-check.html
+++ b/src/main/resources/templates/admin-check.html
@@ -99,8 +99,7 @@
         </section>
     </main>
 
-    <footer>
-        <span class="body-1">Copyright © Trinity University of Asia. All rights reserved.</span>
+    <footer th:replace="fragments.html :: footer">
     </footer>
 </body>
 
