--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
                         <button id="signIn" class="general-button button-1">Sign In</button>
                     </div>
                 </form>
-                <span class="body-2 redirect">Currently a trinity student? &nbsp<a th:href="@{/signup}">Create your
+                <span class="body-2 redirect">Don't have an account? &nbsp<a th:href="@{/signup}">Create your
                         trinitian
                         account
                         now.</a></span>
