--- a/src/main/resources/templates/student-req.html
+++ b/src/main/resources/templates/student-req.html
@@ -62,14 +62,21 @@
                     <input type="text" class="text-input body-1" name="param3"> <span class="body-1">Pls. indicate fee /
                         amount </span><input type="text" class="text-input body-1" name="param4"> <br>
                     <button class="general-button button-1">Submit</button>
-                </form>
+                </form> <br>
+                <span class="body-1">NOTE: Transcript not claimed within a year from its due date shall be discarded;
+                    and its
+                    application shall be deemed null and void. <br>Enrollment during the semester when the application
+                    is
+                    filed will not reflect in the transcript. <br> A representative may request claim for the acdemic
+                    record
+                    of a student, provided that he has an authorization letter from the student and his
+                    (representative's) valid ID with photo.</span>
             </div>
 
         </section>
     </main>
 
-    <footer>
-        <span class="body-1">Copyright © Trinity University of Asia. All rights reserved.</span>
+    <footer th:replace="fragments.html :: footer">
     </footer>
 </body>
 
