--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,4 +1,4 @@
-/* {
+/* * {
   outline: 1px red solid;
 } */
 
@@ -41,13 +41,50 @@ header {
 
 footer {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
   background-color: var(--global-foreground-color);
   color: var(--global-background-color);
-  height: 2.5rem;
+  height: 10rem;
   align-items: center;
+  padding-left: 20%;
+  padding-right: 20%;
   flex-shrink: 0;
+}
+footer img {
+  width: 100px;
+  height: 100px;
+}
+
+footer a {
+  color: var(--global-background-color);
+  /* text-decoration: none; */
+  font-weight: 300;
+}
+footer div.footer-top {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+  width: 100%;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+footer div.footer-nav {
+  display: flex;
+  flex: 2;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+footer div.footer-nav-cat {
+  display: flex;
+  width: 7.5rem;
+  gap: 0.35rem;
+  flex-direction: column;
 }
 
 /* Main */
@@ -64,7 +101,7 @@ section {
   /* height: 100%; */
   background-color: var(--global-background-color);
   color: var(--global-foreground-color);
-  padding: 2rem;
+  padding: rem;
   /* margin: 2rem 0rem; */
 }
 
@@ -86,7 +123,9 @@ section .account {
 aside {
   display: flex;
   flex-flow: nowrap;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
   height: 100%;
   width: 35%;
   margin-right: 1rem;
@@ -95,6 +134,53 @@ aside {
 
 aside img {
   max-width: 100%;
+}
+
+aside.aside-dashboard {
+  display: flex;
+  /* flex-flow: nowrap; */
+  align-items: center;
+  justify-content: flex-start;
+  height: 100%;
+  width: 25%;
+}
+
+aside button {
+  margin-top: 0.5rem;
+}
+aside h2 {
+  color: var(--global-background-color);
+  margin-bottom: 0.25rem;
+  margin-top: 1rem;
+}
+
+aside div.box-dashboard {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  height: 8.5%;
+  width: 80%;
+  background-color: var(--global-background-color);
+  margin-top: 0.5rem;
+  color: var(--global-foreground-color);
+}
+
+aside div span.number {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  font-weight: 700;
+  width: 100%;
+}
+
+aside div span.text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.7rem;
+  font-weight: 400;
 }
 
 section .container {
@@ -120,6 +206,7 @@ section .account button {
 }
 
 .icon-logo {
+  margin-top: 1rem;
   height: 5rem;
 }
 
@@ -193,19 +280,9 @@ section .student-request .manage-request table {
 section .student-request .request-details .form-buttons {
   display: flex;
   flex-flow: row wrap;
-  justify-content: center;
+  justify-content: flex-start;
   margin-top: 0.75rem;
   gap: 0.5rem;
-}
-section .student-request .request-details .form-buttons2 {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: left;
-  margin-top: 0.75rem;
-  gap: 0.5rem;
-}
-section .student-request .request-details .form-buttons2 button {
-  width: 15%;
 }
 section .student-request .request-details .form-buttons button {
   width: 22%;
