--- a/src/main/resources/templates/admin-report.html
+++ b/src/main/resources/templates/admin-report.html
@@ -62,8 +62,7 @@
         </section>
     </main>
 
-    <footer>
-        <span class=" body-1">Copyright © Trinity University of Asia. All rights reserved.</span>
+    <footer th:replace="fragments.html :: footer">
     </footer>
 </body>
 
