--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -7,6 +7,19 @@
     <header th:replace="fragments.html :: header"></header>
 
     <main>
+        <aside class="aside-dashboard">
+            <h2>Admin Buttons</h2>
+            <button class="reg-button-filled button-1">Manage Employee Accounts</button>
+            <button class="reg-button-filled button-1">Check Rejeceted Requests</button>
+            <button class="reg-button-filled button-1">Check Completed Requests</button>
+            <h2>Admin Dashboard</h2>
+            <div class="box-dashboard"><span class="number">30</span><span class="text">Pending</span></div>
+            <div class="box-dashboard"><span class="number">30</span><span class="text">Approved</span></div>
+            <div class="box-dashboard"><span class="number">30</span><span class="text">Checked</span></div>
+            <div class="box-dashboard"><span class="number">30</span><span class="text">Printing</span></div>
+            <div class="box-dashboard"><span class="number">30</span><span class="text">Rejected</span></div>
+            <div class="box-dashboard"><span class="number">30</span><span class="text">Completed</span></div>
+        </aside>
         <section>
             <img class="icon-logo" th:src="@{/img/TUA-logo.png}">
             <div class="section-header">
@@ -125,8 +138,7 @@
         </section>
     </main>
 
-    <footer>
-        <span class="body-1">Copyright © Trinity University of Asia. All rights reserved.</span>
+    <footer th:replace="fragments.html :: footer">
     </footer>
 </body>
 
